tests/files/parser_tests/should_fail/100.cmdr
//Should not parse incorrect type format
type one = 1;